Preparations for Transactional support with Java 17.